--- a/.github/workflows/gen-wg.yml
+++ b/.github/workflows/gen-wg.yml
@@ -24,7 +24,12 @@ jobs:
       - name: Import GPG key
         run: |
           echo "${{ secrets.CI_GPG_PRIVATE_KEY }}" | gpg --batch --import
-          echo "trusted-key $(gpg --list-keys --with-colons | awk -F: '/^fpr:/ { print $10 }')" >> ~/.gnupg/gpg.conf
+
+          # Extract fingerprint
+          FPR=$(gpg --list-keys --with-colons | awk -F: '/^fpr:/ {print $10; exit}')
+    
+          # Trust the key explicitly
+          echo "$FPR:6:" | gpg --import-ownertrust
 
       - name: Unlock git-crypt
         run: git-crypt unlock
